# thundermail

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  aarch64-windows.json  config.toml.example
.github/workflows/: android.yml  ci.yml  ios.yml  release.yml
plugins-sdk/src/: libs.rs
scripts/: build.sh  harden-os.sh
src/: lib.rs  main.rs
src/ai/: categorizer.rs  mod.rs  ollama.rs  venice.rs
src/core/: labels.rs  mod.rs  plugins_host.rs  session.rs  worker.rs
src/crypto/: ephemeral.rs  gpg_keys.rs  mod.rs  pgp.rs  rfc9788.rs
src/db/: mod.rs  schema.rs  search.rs
src/net/: mod.rs  proxy.rs  tls.rs
src/privacy/: headers.rs  mod.rs  sanitizer.rs
src/ui/: app.rs  mod.rs  onboarding.rs  sidebar.rs  theme.rs
tests/: crypto_integrity.rs  leaks.rs
wix/: License.rtf  main.wxs
