[package]
name = "thundermail"
version = "0.2.0"
edition = "2021"
authors = ["thundertimes"]
license = "MIT"
description = "A high-performance, Sovereign email client in Rust"

[package.metadata.security]
rustfmt = true

[lib]
name = "thundermail"
path = "src/lib.rs"

[[bin]]
name = "thundermail"
path = "src/main.rs"

[dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# IMAP/SMTP Protocol
tokio-imap = "0.9"
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transaction", "build"] }

# Cryptography
sequoia-openpgp = "1.19"
pgp = "0.13" # Legacy compatibility
zeroize = { version = "1.7", features = ["derive"] }

# Database & Search
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tantivy = "0.22"

# Networking
tokio-socks = "0.5"
rustls = "0.23"
native-tls = "0.2"
dns-resolver = "0.5"

# AI Engine
ollama-rs = "0.1"
reqwest = { version = "0.12", features = ["json"] }

# UI (egui)
egui = "0.28"
eframe = "0.28"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
base64 = "0.22"
hex = "0.4"
regex = "1.10"
lazy_static = "1.5"
parking_lot = "0.12"
once_cell = "1.19"
directories = "5.0"
keyring = "3"

[dev-dependencies]
tempfile = "3.10"
mockall = "0.12"
proptest = "1.4"

[features]
default = ["vendored-openssl"]
vendored-openssl = ["native-tls/vendored-openssl"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[profile.dev]
opt-level = 0
debug = true

[workspace]
members = []

[badges]
security = "https://github.com/thundertimes/thundermail/blob/main/SECURITY.md"
