[package]
name = "thundermail"
version = "0.2.0"
edition = "2021"
authors = ["thundertimes"]
license = "MIT"
description = "A high-performance, Sovereign email client in Rust"

[package.metadata.bundle]
name = "Thundermail"
identifier = "org.thundertimes.thundermail"
version = "0.2.0"
copyright = "Copyright (c) 2024 Thundertimes"
category = "productivity"
short_description = "A high-performance, Sovereign email client"
long_description = "Thundermail is a secure, privacy-focused email client built with Rust and egui."
icon = ["resources/icon.png"]

[lib]
name = "thundermail"
path = "src/lib.rs"

[[bin]]
name = "thundermail"
path = "src/main.rs"

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# IMAP/SMTP Protocol
async-native-tls = "0.5"
async-imap = "0.9"
lettre = { version = "0.10", features = ["tokio1-native-tls"] }

# Cryptography
zeroize = { version = "1", features = ["derive"] }

# Database & Search
rusqlite = { version = "0.31", features = ["bundled"] }

# Networking
tokio-socks = "0.5"
rustls = "0.21"

# AI Engine
reqwest = { version = "0.11", features = ["json", "blocking"] }

# UI (egui)
egui = "0.24"
eframe = "0.24"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.21"
regex = "1.10"
lazy_static = "1.4"
parking_lot = "0.12"
directories = "5"
dirs = "5"
rand = "0.8"
image = { version = "0.24", default-features = false, features = ["png"] }

[dev-dependencies]
tempfile = "3"
cargo-bundle = "0.9"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[profile.dev]
opt-level = 0
debug = true

# Cross-compilation targets
[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "target-feature=+crt-static"]

[target.aarch64-unknown-linux-gnu]
rustflags = ["-C", "target-feature=+crt-static"]

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[target.aarch64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-mmacosx-version-min=10.15"]

[workspace]
members = []

[dependencies.winapi]
version = "0.3"
features = ["winuser"]
